--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
                 btns[0].textContent = 'Procesando...';
 
                 // Enviar al backend
-                const backendUrl = "https://tu-backend-gratis.onrender.com/transcribe"; // ← ¡CAMBIA ESTO!
+                const backendUrl = "https://asistente-voz-backend-wpi8.onrender.com"; // ← ¡CAMBIA ESTO!
                 const response = await fetch(backendUrl, {
                     method: 'POST',
                     body: formData
